--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,7 +13,7 @@
 }
 
 body, html {
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.726);
     height: 100vh;
     width: 100vw;
 }
@@ -36,6 +36,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
