--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -54,4 +54,13 @@ Telas Grandes: Acima de 1200px
         float: right;
         width: 50%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
+    }
+
 }
