--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -17,6 +17,7 @@ Telas Grandes: Acima de 1200px
 
     section#login {
         width: 80vw;
+        height: 310px;
     }
 
     section#login > div#imagem {
@@ -31,6 +32,11 @@ Telas Grandes: Acima de 1200px
         float: right;
         width: 70%;
     }
+
+    div#formulario > p {
+        font-size: 1.1em;
+        margin: 18px 0px;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -41,6 +47,7 @@ Telas Grandes: Acima de 1200px
 
     section#login {
         width: 950px;
+        height: 330px;
     }
 
     section#login > div#imagem {
@@ -61,6 +68,7 @@ Telas Grandes: Acima de 1200px
 
     div#formulario > p {
         font-size: 1.2em;
+        margin: 18px 0px;
     }
 
 }
