--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: #ffff;
@@ -37,6 +36,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -62,3 +62,75 @@ div#formulario > h1 {
 div#formulario > p{
     font-size: 0.8em;
 }
+form > div.campo {
+    background-color: rgb(33, 38, 41);
+    border: 2px solid rgb(33, 38, 41);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #ffff;
+    font-size: 1em;
+    width: calc(100% - 44px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(33, 38, 41);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: rgb(87, 86, 86);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    text-decoration: none;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    border: 1px solid  rgb(87, 86, 86);
+    border-radius: 8px;
+    color: rgb(0, 0, 0);
+    background-color: white;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
+}
+
+form > a.botao:hover {
+    background-color: rgb(87, 86, 86);
+}
+
